--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <center>
-	<img src="img/leaders.gif" /><br>
+	<img src="img/leaders.gif" /></br>
 	<h1>Galeria<h1>
 	<a href= "img/l/Anduin.png" target="_blank" title=""> <img src="img/s/Anduin1.png"></a>
 	<a href= "img/l/Magni.png" target="_blank" title=""> <img src="img/s/Magni1.png"></a>
